Files reassigned directories.

--- a/Jupyter Notebooks/VacationPy.ipynb
+++ b/Jupyter Notebooks/VacationPy.ipynb
@@ -243,7 +243,7 @@
    ],
    "source": [
     "#Load the CSV Output File From Part 1 Into This File\n",
-    "file = \"Weather_Output.csv\"\n",
+    "file = \"../Data Files/Weather_Output.csv\"\n",
     "weather_output_df = pd.read_csv(file)\n",
     "weather_output_df"
    ]
